--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
     "mongodb": "^6.3.0",
-    "next": "^15.1.9",
+    "next": "15.1.10",
     "next-themes": "^0.4.6",
     "react": "^19.0.1",
     "react-dom": "^19.0.1",
